--- a/dapps/react-dapp-v2-with-web3js/.env.local.example
+++ b/dapps/react-dapp-v2-with-web3js/.env.local.example
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_PROJECT_ID=39bc93c...
+NEXT_PUBLIC_PROJECT_ID=ac71dc7e81867486cf788f934ef30369
 NEXT_PUBLIC_RELAY_URL=wss://relay.walletconnect.com
 
